--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.1.1",
     "tailwindcss": "^3.4.1",
     "vite": "^7.1.2"
   }
